dbeaver/pro#6214 fix duplicating features